syntax = "proto3";

import "google/protobuf/empty.proto";

package coldmod_msg.proto.source;

message HeatMap {
  string root_path = 1;
  repeated HeatSrc heat_srcs = 2;
}

message HeatSrc {
  string path = 1;
  uint32 line = 2;
  string name = 3;
  optional string class_name = 4;
}

service HeatMaps {
  rpc submit(HeatMap) returns (google.protobuf.Empty);
}
